--- a/css/flexClass.css
+++ b/css/flexClass.css
@@ -29,29 +29,34 @@
 }
 .boxes-1 {
   background-color: #f2633b;
-  height: 100px;
-  width: 100px;
+  /* height: 100px;*/
+  width: 100px; 
 }
 
 .boxes-2 {
   background-color: #5d3bf2;
-  height: 100px;
+   /* height: 100px; */
   width: 100px;
 }
 .boxes-3 {
   background-color: #f23bb2;
-  height: 100px;
-  width: 100px;
+ /* height: 100px; */
+    width: 100px;
 }
 .boxes-4 {
   background-color: #3bf244;
-  height: 100px;
-  width: 100px;
+  /* height: 100px; */
+  width: 100px; 
+  
 }
+
 .g-parent{
     margin: 30px;
     display: grid;
+    gap: 30px;
+    /* grid-template-columns: auto auto auto auto; */
+    /* grid-template-columns: repeat(2 , 1fr); */
+    grid-template-rows: 200px 200px 200px 200px;
     /* grid-template-rows: 300px 200px 500px; */
-    gap: 50px;
+    /* gap: 50px; */
 }
-/* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));  */
